# TNAH-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  ICT397-Project.sln  README.md  TNAH-Engine.sln  TNAH-Engine.sln.DotSettings
397/: BoundingBox.cpp  Callbacks.cpp  Debugger.cpp  EndScreenGUI.h  Enemy.cpp  Enemy.h  Fbx.h  GameObject.h  Input.cpp  MainMenuGUI.h  Md2.cpp  Md2.h  OpenGL.h  PhysicsEvents.h  Scene.cpp  Scene.h  SettingsManager.h  View.cpp  Water.h  Windows.h  luaManager.cpp  luaManager.h  playerStates.h
397/src/: BoundingBox.h  Buffer.cpp  Engine.h  EntityManager.h  ExitScreen.h  GameObject.cpp  GlfwWindow.h  Input.h  Manager.h  MenuGUI.h  Mesh.cpp  PhysicsEvents.cpp  Player.cpp  Shader.h  Telegram.h  Terrain.cpp  TextureLoader.cpp  Window.cpp
AStar/: AStar.vcxproj
AStar/src/: MainLayer.cpp
Applications/ICT398-Application/: ICT398-Application.vcxproj  ICT398-Application.vcxproj.filters
Applications/TNAH-Editor/: TNAH-Editor.vcxproj
Applications/Testbed-App/: Testbed-App.vcxproj
Bush Court/ref images/: google_maps_with_scale.xcf
ChrisPhysics/: ChrisPhysics.vcxproj
ChrisPhysics/assets/: physics.txt  physics2.txt  physics3.txt
ChrisPhysics/src/: DemoApp.cpp  DemoApp.h  MainLayer.cpp  MainLayer.h  PhysicsLoader.cpp  PhysicsLoader.h
Documentation/: AssignmentCoverSheet.doc  Discussion of Issues Encountered.docx  GroupDeclarationSheet.doc  GroupSelfAssessment.docx  Special Features Declaration.docx  TaskBreakdownList.docx  UserManual.docx  ZOOM Game Design Document.doc  ZOOM Game Software Design Document.docx
Documentation/doxygen/: Doxyfile
Documents/: EmotionsUML.mdj
Doxygen/html/: _bounding_box_8cpp.html  _bounding_box_8cpp__incl.dot  _bounding_box_8cpp_source.html  _bounding_box_8h.html  _bounding_box_8h__dep__incl.dot  _bounding_box_8h__incl.dot  _bounding_box_8h_source.html  _buffer_8cpp.html  _buffer_8cpp__incl.dot  _buffer_8cpp_source.html  _buffer_8h.html  _buffer_8h__dep__incl.dot  _buffer_8h__incl.dot  _buffer_8h_source.html  _callbacks_8cpp.html  _callbacks_8cpp.js  _callbacks_8cpp__incl.dot  _callbacks_8cpp_source.html  _callbacks_8h.html  _callbacks_8h.js  _callbacks_8h__dep__incl.dot  _callbacks_8h__incl.dot  _callbacks_8h_source.html  _debug_g_u_i_8cpp.html  _debug_g_u_i_8cpp__incl.dot  _debug_g_u_i_8cpp_source.html  _debug_g_u_i_8h.html  _debug_g_u_i_8h__dep__incl.dot  _debug_g_u_i_8h__incl.dot  _debug_g_u_i_8h_source.html  _debugger_8cpp.html  _debugger_8cpp__incl.dot  _debugger_8cpp_source.html  _debugger_8h.html  _debugger_8h__dep__incl.dot  _debugger_8h__incl.dot  _debugger_8h_source.html  _debugging_8h_source.html  _dynamic_enum_8cpp.html  _dynamic_enum_8cpp__incl.dot  (+1515 more)
Doxygen/latex/: _bounding_box_8cpp.tex  _bounding_box_8cpp__incl.dot  _bounding_box_8h.tex  _bounding_box_8h__dep__incl.dot  _bounding_box_8h__incl.dot  _buffer_8cpp.tex  _buffer_8cpp__incl.dot  _buffer_8h.tex  _buffer_8h__dep__incl.dot  _buffer_8h__incl.dot  _callbacks_8cpp.tex  _callbacks_8cpp__incl.dot  _callbacks_8h.tex  (+713 more)
GLFW/: GLFW.vcxproj
Glad/: Glad.vcxproj
ICT397-Project-Engine/: BoundingBox.cpp  BoundingBox.h  Buffer.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  DebugGUI.cpp  DebugGUI.h  Debugger.cpp  Debugger.h  Debugging.cpp  Debugging.h  EndScreenGUI.cpp  EndScreenGUI.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  EntityManager.cpp  EntityManager.h  ExitScreen.cpp  ExitScreen.h  Fbx.cpp  Fbx.h  GUI.cpp  GUI.h  GameAssetFactory.cpp  GameAssetFactory.h  GameEngine.h  GameGUI.cpp  GameGUI.h  GameManager.h  GameObject.cpp  GameObject.h  GladRenderer.cpp  GladRenderer.h  GladSkybox.cpp  GladSkybox.h  GlewBuffer.cpp  GlewBuffer.h  (+84 more)
ICT398-Application/: ICT398-Application.vcxproj
ImGUI/: ImGUI.vcxproj  ImGUI.vcxproj.filters
PhyiscsDemo_Bryce/: PhyiscsDemo_Bryce.vcxproj
Sandbox-Game/: Sandbox-Game.vcxproj  Sandbox-Game.vcxproj.filters
TNAH-Editor/: TNAH-Editor.vcxproj  TNAH-Editor.vcxproj.filters
TNAH-Engine/: Animation.h  BirdStates.cpp  BirdStates.h  Bone.h  Collider.cpp  Collider.h  PhysicsEngine.cpp  PhysicsStructs.h  Rigidbody.cpp  Rigidbody.h  Skybox.cpp  Skybox.h  StudentStates.h  TNAH-Engine.vcxproj  TNAH-Engine.vcxproj.filters
TNAH-Engine-Core/: TNAH-Engine-Core.vcxproj  TNAH-Engine-Core.vcxproj.filters
Testbed-App/: Testbed-App.vcxproj  Testbed-App.vcxproj.filters
assimp/: assimp.vcxproj  assimp.vcxproj.filters
lib/: assimp-vc142-mtd.exp
src/: BoundingBox.cpp  BoundingBox.h  Buffer.cpp  CMakeLists.txt  Callbacks.h  DebugGUI.h  DynamicEnum.cpp  DynamicEnum.h  Enemy.cpp  Enemy.h  Engine.cpp  EntityManager.h  ExitScreen.cpp  ExitScreen.h  Fbx.h  GameAssetFactory.cpp  GameObject.h  GlfwWindow.cpp  MainMenuGUI.cpp  Manager.h  Md2State.cpp  Md2State.h  MenuGUI.h  Mesh.h  Model.cpp  OpenGL.cpp  OpenGL.h  PhysicsEvents.cpp  PhysicsEvents.h  PhysicsManager.cpp  Player.h  Scene.cpp  Scene.h  Shader.cpp  SingletonHeaders.cpp  Skybox.h  Static.cpp  Static.h  TNAH-Engine.vcxproj  TNAH-Engine.vcxproj.filters  (+11 more)
(+1409 files in other folders)
